# calculate_drill

./: .pylintrc  pyproject.toml
calculate_drill/: __main__.py
calculate_drill/calculate_drill/: __init__.py  drill.py
documents/: 三桁引算.xlsx  三桁足算.xlsx  掛け算.xlsx  足し算.xlsx
