[tool.poetry]
name = "calculate_drill"
version = "0.1.0"
description = ""
authors = ["Masato Morita <m.morita44@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5.1"

[tool.poetry.scripts]
calculate_drill = 'calculate_drill.calculate_drill:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
